# karadagkanelouis

./: .gitmodules  CMakeLists.txt  Makefile  README  README.md  gmon.out  test.json  test.txt  testdisplay.txt
rapport/: Rapport.odt  ~$apport.odt  ~$deleRapport.odt
res/: frames_info.json
res/map/: Medieval.tsx  buildings.tsx  ground.tsx  map_1.json  map_1.tmx  map_2.tmx  map_3.tmx  perso.tsx  tiles.json  trees.tsx
res/tiles/: Tilesmap.tsx
scripts/: code-coverage.sh  install_submodules.sh  make_helper.sh  push_submodules.sh  requirements.sh  update_dia.sh  utils.py
src/: ai.dia  client.dia  engine.dia  engine.dia.autosave  main.cpp  render.dia  render.dia.autosave  state.dia  state.dia.autosave
src/client/: CMakeLists.txt  main.cpp  main.cpp0
src/client/client/: Exemple.cpp
src/client/render/: AnimatedObject.cpp  Background.cpp  Box.cpp  Button.cpp  FightScene.cpp  GameWindow.cpp  Info.cpp  Scene.cpp
src/examples/: AddRemoveObjects.cpp  Benchmark.cpp  CMakeLists.txt  Isometric.cpp  MapWithQuadTree.cpp  ShaderEffects.cpp  button_test.cpp  render2.1.c  render2.1.cpp00  sfmlTest1.cpp  testDrawable.cpp  view_zoom.cpp
src/python/: frame.py  frameMaker.ipynb  frameMaker.py  walkDir.py
src/shared/: CMakeLists.txt
src/shared/ai/: AI.cpp  AdvancedAI.cpp  Attack_Closest.cpp  Attack_Most_InDanger.cpp  Attack_Strongest.cpp  DeepAI.cpp  (+4 more)
test/client/: test_client_dummy.cpp
test/shared/: CMakeLists.txt  kane_test.cpp  karadag_test.cpp  temp  test_shared_dummy.cpp  test_shared_kane.cpp  test_shared_kane0.cpp  test_shared_karadag.cpp  test_shared_louis.cpp
(+18 files in other folders)
